-Changed labe width -Changed IM align -Fixed social padding

--- a/css/contatti-desktop.css
+++ b/css/contatti-desktop.css
@@ -60,7 +60,7 @@
                     }
                     span.label {
                         padding: 15px;
-                        min-width: 23%;
+                        min-width: 26%;
                         display: inline-flex;
                         text-align: unset;
                         justify-content: space-between;
@@ -73,7 +73,7 @@
         }
         section#contactIM {
             grid-column: 4 / 5;
-
+            text-align: center;
             a {
                 margin: 5px;
                 padding: 15px;
@@ -122,6 +122,7 @@
 
                     a {
                         margin: unset;
+                        padding: 2vw;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
